// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for App render should render correctly (arc) 1`] = `
<div
  className="fill"
>
  <div
    style={
      Object {
        "backgroundColor": "rgb(100, 79, 238)",
        "padding": "5px",
        "textAlign": "center",
      }
    }
  >
    <span>
      Building a DApp? 
    </span>
    <a
      href="https://nearprotocol.com/beta/"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Apply to the Beta Program!
    </a>
  </div>
  <ToastContainer />
  <NewProjectDialog
    isOpen={true}
    onCancel={[Function]}
    onCreate={[Function]}
  />
  <div
    style={
      Object {
        "height": "calc(100% - 51px)",
      }
    }
  >
    <Split
      name="Workspace"
      onChange={[Function]}
      orientation={1}
      splits={
        Array [
          Object {
            "max": 400,
            "min": 200,
            "value": 200,
          },
          Object {
            "min": 256,
          },
        ]
      }
    >
      <Workspace
        file={null}
        onClickFile={[Function]}
        onDeleteFile={[Function]}
        onDoubleClickFile={[Function]}
        onEditFile={[Function]}
        onMoveFile={[Function]}
        onNewDirectory={[Function]}
        onNewFile={[Function]}
        onUploadFile={[Function]}
        project={
          ModelRef {
            "obj": Project {
              "buffer": Object {
                "IEditorConstructionOptions": Object {
                  "value": [Function],
                },
                "addAction": [Function],
                "addCommand": [Function],
                "applyEdits": [Function],
                "create": [Function],
                "createModel": [Function],
                "defineTheme": [Function],
                "getLineCount": [Function],
                "getLineMaxColumn": [Function],
                "getModel": [Function],
                "getValue": [Function],
                "layout": [Function],
                "onContextMenu": [Function],
                "onDidChangeContent": [Function],
                "onDidFocusEditorText": [Function],
                "onDidFocusEditorWidget": [Function],
                "restoreViewState": [Function],
                "revealLine": [Function],
                "saveViewState": [Function],
                "setModel": [Function],
                "setModelLanguage": [Function],
                "setModelMarkers": [Function],
                "setValue": [Function],
                "toString": [Function],
                "updateOptions": [Function],
                "uri": Object {
                  "toString": [Function],
                },
              },
              "bufferType": "directory",
              "children": Array [],
              "data": null,
              "isBufferReadOnly": false,
              "isDirty": false,
              "isOpen": true,
              "isTransient": false,
              "key": "51",
              "name": "Project",
              "onChange": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Project Change",
              },
              "onDidChangeBuffer": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Buffer Change",
              },
              "onDidChangeChildren": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Directory Changed ",
              },
              "onDidChangeData": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Data Change",
              },
              "onDidChangeDirty": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Dirty Flag Change",
              },
              "onDidChangeProblems": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Problems Change",
              },
              "onDidChangeStatus": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Status Change",
              },
              "onDirtyFileUsed": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Dirty File Used",
              },
              "parent": null,
              "problems": Array [],
              "status": Array [
                "Idle",
              ],
              "type": "directory",
            },
          }
        }
      />
      <div
        className="fill"
      >
        <div
          style={
            Object {
              "height": "40px",
            }
          }
        >
          <Toolbar>
            <Button
              icon={<GoThreeBars />}
              key="ViewWorkspace"
              onClick={[Function]}
              title="View Project Workspace"
            />
            <Button
              icon={<GoFile />}
              isDisabled={false}
              key="NewProject"
              label="New"
              onClick={[Function]}
              title="New Project"
            />
            <Button
              icon={<GoRepoForked />}
              isDisabled={false}
              key="ForkProject"
              label="Fork"
              onClick={[Function]}
              title="Fork Project"
            />
            <Button
              icon={<GoGear />}
              isDisabled={false}
              key="Preview"
              label="Preview"
              onClick={[Function]}
              title="Preview Project: CtrlCmd + Enter"
            />
            <Button
              icon={<GoGear />}
              isDisabled={false}
              key="BuildAndPreview"
              label="Build & Preview"
              onClick={[Function]}
              title="Build & Preview Project: CtrlCmd + Alt + Enter"
            />
          </Toolbar>
        </div>
        <div
          style={
            Object {
              "height": "calc(100% - 40px)",
            }
          }
        >
          <Split
            name="Console"
            onChange={[Function]}
            orientation={0}
            splits={
              Array [
                Object {
                  "min": 100,
                },
                Object {
                  "min": 40,
                  "value": 256,
                },
              ]
            }
          >
            <Split
              defaultSplit={
                Object {
                  "min": 128,
                }
              }
              name="Editors"
              onChange={[Function]}
              orientation={1}
              splits={Array []}
            >
              <ViewTabs
                hasFocus={true}
                key="editorPane0"
                onChangeViewType={[Function]}
                onClickView={[Function]}
                onClose={[Function]}
                onDoubleClickView={[Function]}
                onFocus={[Function]}
                onNewFile={[Function]}
                onSplitViews={[Function]}
                view={null}
                views={Array []}
              />
            </Split>
            <ControlCenter
              onToggle={[Function]}
            />
          </Split>
        </div>
      </div>
    </Split>
  </div>
  <StatusBar />
  <div
    id="task-runner-content"
  />
</div>
`;

exports[`Tests for App render should render correctly (embedded) 1`] = `
<div
  className="fill"
>
  <div
    style={
      Object {
        "backgroundColor": "rgb(100, 79, 238)",
        "padding": "5px",
        "textAlign": "center",
      }
    }
  >
    <span>
      Building a DApp? 
    </span>
    <a
      href="https://nearprotocol.com/beta/"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Apply to the Beta Program!
    </a>
  </div>
  <ToastContainer />
  <NewProjectDialog
    isOpen={true}
    onCancel={[Function]}
    onCreate={[Function]}
  />
  <div
    style={
      Object {
        "height": "calc(100% - 51px)",
      }
    }
  >
    <Split
      name="Workspace"
      onChange={[Function]}
      orientation={1}
      splits={
        Array [
          Object {
            "max": 400,
            "min": 200,
            "value": 200,
          },
          Object {
            "min": 256,
          },
        ]
      }
    >
      <Workspace
        file={null}
        onClickFile={[Function]}
        onDeleteFile={[Function]}
        onDoubleClickFile={[Function]}
        onEditFile={[Function]}
        onMoveFile={[Function]}
        onNewDirectory={[Function]}
        onNewFile={[Function]}
        onUploadFile={[Function]}
        project={
          ModelRef {
            "obj": Project {
              "buffer": Object {
                "IEditorConstructionOptions": Object {
                  "value": [Function],
                },
                "addAction": [Function],
                "addCommand": [Function],
                "applyEdits": [Function],
                "create": [Function],
                "createModel": [Function],
                "defineTheme": [Function],
                "getLineCount": [Function],
                "getLineMaxColumn": [Function],
                "getModel": [Function],
                "getValue": [Function],
                "layout": [Function],
                "onContextMenu": [Function],
                "onDidChangeContent": [Function],
                "onDidFocusEditorText": [Function],
                "onDidFocusEditorWidget": [Function],
                "restoreViewState": [Function],
                "revealLine": [Function],
                "saveViewState": [Function],
                "setModel": [Function],
                "setModelLanguage": [Function],
                "setModelMarkers": [Function],
                "setValue": [Function],
                "toString": [Function],
                "updateOptions": [Function],
                "uri": Object {
                  "toString": [Function],
                },
              },
              "bufferType": "directory",
              "children": Array [],
              "data": null,
              "isBufferReadOnly": false,
              "isDirty": false,
              "isOpen": true,
              "isTransient": false,
              "key": "49",
              "name": "Project",
              "onChange": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Project Change",
              },
              "onDidChangeBuffer": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Buffer Change",
              },
              "onDidChangeChildren": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Directory Changed ",
              },
              "onDidChangeData": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Data Change",
              },
              "onDidChangeDirty": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Dirty Flag Change",
              },
              "onDidChangeProblems": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Problems Change",
              },
              "onDidChangeStatus": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Status Change",
              },
              "onDirtyFileUsed": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Dirty File Used",
              },
              "parent": null,
              "problems": Array [],
              "status": Array [
                "Idle",
              ],
              "type": "directory",
            },
          }
        }
      />
      <div
        className="fill"
      >
        <div
          style={
            Object {
              "height": "40px",
            }
          }
        >
          <Toolbar>
            <Button
              icon={<GoThreeBars />}
              key="ViewWorkspace"
              onClick={[Function]}
              title="View Project Workspace"
            />
            <Button
              icon={<GoFile />}
              isDisabled={false}
              key="NewProject"
              label="New"
              onClick={[Function]}
              title="New Project"
            />
            <Button
              href="//studio.nearprotocol.com/?f=null"
              icon={<GoPencil />}
              isDisabled={true}
              key="EditInWebAssemblyStudio"
              label="Edit in NEAR Studio"
              rel="noopener noreferrer"
              target="wasm.studio"
              title="Edit Project in NEAR Studio"
            />
            <Button
              icon={<Play />}
              isDisabled={true}
              key="Run"
              label="Run"
              onClick={[Function]}
              title="Run Project: CtrlCmd + Enter"
            />
            <Button
              icon={<GoCheck />}
              isDisabled={true}
              key="Test"
              label="Test"
              onClick={[Function]}
              title="Run project tests"
            />
          </Toolbar>
        </div>
        <div
          style={
            Object {
              "height": "calc(100% - 40px)",
            }
          }
        >
          <Split
            name="Console"
            onChange={[Function]}
            orientation={0}
            splits={
              Array [
                Object {
                  "min": 100,
                },
                Object {
                  "min": 40,
                  "value": 256,
                },
              ]
            }
          >
            <Split
              defaultSplit={
                Object {
                  "min": 128,
                }
              }
              name="Editors"
              onChange={[Function]}
              orientation={1}
              splits={Array []}
            >
              <ViewTabs
                hasFocus={true}
                key="editorPane0"
                onChangeViewType={[Function]}
                onClickView={[Function]}
                onClose={[Function]}
                onDoubleClickView={[Function]}
                onFocus={[Function]}
                onNewFile={[Function]}
                onSplitViews={[Function]}
                view={null}
                views={Array []}
              />
            </Split>
            <ControlCenter
              onToggle={[Function]}
            />
          </Split>
        </div>
      </div>
    </Split>
  </div>
  <StatusBar />
  <div
    id="task-runner-content"
  />
</div>
`;

exports[`Tests for App render should render correctly (fiddle) 1`] = `
<div
  className="fill"
>
  <div
    style={
      Object {
        "backgroundColor": "rgb(100, 79, 238)",
        "padding": "5px",
        "textAlign": "center",
      }
    }
  >
    <span>
      Building a DApp? 
    </span>
    <a
      href="https://nearprotocol.com/beta/"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Apply to the Beta Program!
    </a>
  </div>
  <ToastContainer />
  <div
    style={
      Object {
        "height": "calc(100% - 51px)",
      }
    }
  >
    <Split
      name="Workspace"
      onChange={[Function]}
      orientation={1}
      splits={
        Array [
          Object {
            "max": 400,
            "min": 200,
            "value": 200,
          },
          Object {
            "min": 256,
          },
        ]
      }
    >
      <Workspace
        file={null}
        onClickFile={[Function]}
        onDeleteFile={[Function]}
        onDoubleClickFile={[Function]}
        onEditFile={[Function]}
        onMoveFile={[Function]}
        onNewDirectory={[Function]}
        onNewFile={[Function]}
        onUploadFile={[Function]}
        project={
          ModelRef {
            "obj": Project {
              "buffer": Object {
                "IEditorConstructionOptions": Object {
                  "value": [Function],
                },
                "addAction": [Function],
                "addCommand": [Function],
                "applyEdits": [Function],
                "create": [Function],
                "createModel": [Function],
                "defineTheme": [Function],
                "getLineCount": [Function],
                "getLineMaxColumn": [Function],
                "getModel": [Function],
                "getValue": [Function],
                "layout": [Function],
                "onContextMenu": [Function],
                "onDidChangeContent": [Function],
                "onDidFocusEditorText": [Function],
                "onDidFocusEditorWidget": [Function],
                "restoreViewState": [Function],
                "revealLine": [Function],
                "saveViewState": [Function],
                "setModel": [Function],
                "setModelLanguage": [Function],
                "setModelMarkers": [Function],
                "setValue": [Function],
                "toString": [Function],
                "updateOptions": [Function],
                "uri": Object {
                  "toString": [Function],
                },
              },
              "bufferType": "directory",
              "children": Array [],
              "data": null,
              "isBufferReadOnly": false,
              "isDirty": false,
              "isOpen": true,
              "isTransient": false,
              "key": "55",
              "name": "Project",
              "onChange": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Project Change",
              },
              "onDidChangeBuffer": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Buffer Change",
              },
              "onDidChangeChildren": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Directory Changed ",
              },
              "onDidChangeData": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Data Change",
              },
              "onDidChangeDirty": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Dirty Flag Change",
              },
              "onDidChangeProblems": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Problems Change",
              },
              "onDidChangeStatus": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Status Change",
              },
              "onDirtyFileUsed": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Dirty File Used",
              },
              "parent": null,
              "problems": Array [],
              "status": Array [
                "Idle",
                "Downloading Project",
              ],
              "type": "directory",
            },
          }
        }
      />
      <div
        className="fill"
      >
        <div
          style={
            Object {
              "height": "40px",
            }
          }
        >
          <Toolbar>
            <Button
              icon={<GoThreeBars />}
              key="ViewWorkspace"
              onClick={[Function]}
              title="View Project Workspace"
            />
            <Button
              icon={<GoFile />}
              isDisabled={true}
              key="NewProject"
              label="New"
              onClick={[Function]}
              title="New Project"
            />
            <Button
              icon={<Play />}
              isDisabled={true}
              key="Run"
              label="Run"
              onClick={[Function]}
              title="Run Project: CtrlCmd + Enter"
            />
            <Button
              icon={<GoCheck />}
              isDisabled={true}
              key="Test"
              label="Test"
              onClick={[Function]}
              title="Run project tests"
            />
          </Toolbar>
        </div>
        <div
          style={
            Object {
              "height": "calc(100% - 40px)",
            }
          }
        >
          <Split
            name="Console"
            onChange={[Function]}
            orientation={0}
            splits={
              Array [
                Object {
                  "min": 100,
                },
                Object {
                  "min": 40,
                  "value": 256,
                },
              ]
            }
          >
            <Split
              defaultSplit={
                Object {
                  "min": 128,
                }
              }
              name="Editors"
              onChange={[Function]}
              orientation={1}
              splits={Array []}
            >
              <ViewTabs
                hasFocus={true}
                key="editorPane0"
                onChangeViewType={[Function]}
                onClickView={[Function]}
                onClose={[Function]}
                onDoubleClickView={[Function]}
                onFocus={[Function]}
                onNewFile={[Function]}
                onSplitViews={[Function]}
                view={null}
                views={Array []}
              />
            </Split>
            <ControlCenter
              onToggle={[Function]}
            />
          </Split>
        </div>
      </div>
    </Split>
  </div>
  <StatusBar />
  <div
    id="task-runner-content"
  />
</div>
`;

exports[`Tests for App render should render correctly (update) 1`] = `
<div
  className="fill"
>
  <div
    style={
      Object {
        "backgroundColor": "rgb(100, 79, 238)",
        "padding": "5px",
        "textAlign": "center",
      }
    }
  >
    <span>
      Building a DApp? 
    </span>
    <a
      href="https://nearprotocol.com/beta/"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Apply to the Beta Program!
    </a>
  </div>
  <ToastContainer />
  <NewProjectDialog
    isOpen={true}
    onCancel={[Function]}
    onCreate={[Function]}
  />
  <div
    style={
      Object {
        "height": "calc(100% - 51px)",
      }
    }
  >
    <Split
      name="Workspace"
      onChange={[Function]}
      orientation={1}
      splits={
        Array [
          Object {
            "max": 400,
            "min": 200,
            "value": 200,
          },
          Object {
            "min": 256,
          },
        ]
      }
    >
      <Workspace
        file={null}
        onClickFile={[Function]}
        onDeleteFile={[Function]}
        onDoubleClickFile={[Function]}
        onEditFile={[Function]}
        onMoveFile={[Function]}
        onNewDirectory={[Function]}
        onNewFile={[Function]}
        onUploadFile={[Function]}
        project={
          ModelRef {
            "obj": Project {
              "buffer": Object {
                "IEditorConstructionOptions": Object {
                  "value": [Function],
                },
                "addAction": [Function],
                "addCommand": [Function],
                "applyEdits": [Function],
                "create": [Function],
                "createModel": [Function],
                "defineTheme": [Function],
                "getLineCount": [Function],
                "getLineMaxColumn": [Function],
                "getModel": [Function],
                "getValue": [Function],
                "layout": [Function],
                "onContextMenu": [Function],
                "onDidChangeContent": [Function],
                "onDidFocusEditorText": [Function],
                "onDidFocusEditorWidget": [Function],
                "restoreViewState": [Function],
                "revealLine": [Function],
                "saveViewState": [Function],
                "setModel": [Function],
                "setModelLanguage": [Function],
                "setModelMarkers": [Function],
                "setValue": [Function],
                "toString": [Function],
                "updateOptions": [Function],
                "uri": Object {
                  "toString": [Function],
                },
              },
              "bufferType": "directory",
              "children": Array [],
              "data": null,
              "isBufferReadOnly": false,
              "isDirty": false,
              "isOpen": true,
              "isTransient": false,
              "key": "53",
              "name": "Project",
              "onChange": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Project Change",
              },
              "onDidChangeBuffer": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Buffer Change",
              },
              "onDidChangeChildren": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Directory Changed ",
              },
              "onDidChangeData": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Data Change",
              },
              "onDidChangeDirty": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Dirty Flag Change",
              },
              "onDidChangeProblems": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Problems Change",
              },
              "onDidChangeStatus": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Status Change",
              },
              "onDirtyFileUsed": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Dirty File Used",
              },
              "parent": null,
              "problems": Array [],
              "status": Array [
                "Idle",
              ],
              "type": "directory",
            },
          }
        }
      />
      <div
        className="fill"
      >
        <div
          style={
            Object {
              "height": "40px",
            }
          }
        >
          <Toolbar>
            <Button
              icon={<GoThreeBars />}
              key="ViewWorkspace"
              onClick={[Function]}
              title="View Project Workspace"
            />
            <Button
              icon={<GoFile />}
              isDisabled={false}
              key="NewProject"
              label="New"
              onClick={[Function]}
              title="New Project"
            />
            <Button
              icon={<GoPencil />}
              isDisabled={false}
              key="UpdateProject"
              label="Update"
              onClick={[Function]}
              title="Update Project"
            />
            <Button
              icon={<GoRepoForked />}
              isDisabled={false}
              key="ForkProject"
              label="Fork"
              onClick={[Function]}
              title="Fork Project"
            />
            <Button
              icon={<GoDesktopDownload />}
              isDisabled={false}
              key="Download"
              label="Download"
              onClick={[Function]}
              title="Download Project"
            />
            <Button
              icon={<GoRocket />}
              isDisabled={true}
              key="Share"
              label="Share"
              onClick={[Function]}
              title="Cannot share a project that has not been forked yet."
            />
            <Button
              icon={<Play />}
              isDisabled={true}
              key="Run"
              label="Run"
              onClick={[Function]}
              title="Run Project: CtrlCmd + Enter"
            />
            <Button
              icon={<GoCheck />}
              isDisabled={true}
              key="Test"
              label="Test"
              onClick={[Function]}
              title="Run project tests"
            />
            <Button
              customClassName="issue"
              href="https://github.com/nearprotocol/NEARStudio/issues"
              icon={<GoOpenIssue />}
              key="GithubIssues"
              label="Report a Bug"
              rel="noopener noreferrer"
              target="_blank"
              title="Report a Bug"
            />
            <Button
              customClassName="help"
              icon={<GoQuestion />}
              key="HelpAndPrivacy"
              label="Help & Privacy"
              onClick={[Function]}
              title="Help & Privacy"
            />
          </Toolbar>
        </div>
        <div
          style={
            Object {
              "height": "calc(100% - 40px)",
            }
          }
        >
          <Split
            name="Console"
            onChange={[Function]}
            orientation={0}
            splits={
              Array [
                Object {
                  "min": 100,
                },
                Object {
                  "min": 40,
                  "value": 256,
                },
              ]
            }
          >
            <Split
              defaultSplit={
                Object {
                  "min": 128,
                }
              }
              name="Editors"
              onChange={[Function]}
              orientation={1}
              splits={Array []}
            >
              <ViewTabs
                hasFocus={true}
                key="editorPane0"
                onChangeViewType={[Function]}
                onClickView={[Function]}
                onClose={[Function]}
                onDoubleClickView={[Function]}
                onFocus={[Function]}
                onNewFile={[Function]}
                onSplitViews={[Function]}
                view={null}
                views={Array []}
              />
            </Split>
            <ControlCenter
              onToggle={[Function]}
            />
          </Split>
        </div>
      </div>
    </Split>
  </div>
  <StatusBar />
  <div
    id="task-runner-content"
  />
</div>
`;

exports[`Tests for App render should render correctly 1`] = `
<div
  className="fill"
>
  <div
    style={
      Object {
        "backgroundColor": "rgb(100, 79, 238)",
        "padding": "5px",
        "textAlign": "center",
      }
    }
  >
    <span>
      Building a DApp? 
    </span>
    <a
      href="https://nearprotocol.com/beta/"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Apply to the Beta Program!
    </a>
  </div>
  <ToastContainer />
  <NewProjectDialog
    isOpen={true}
    onCancel={[Function]}
    onCreate={[Function]}
  />
  <div
    style={
      Object {
        "height": "calc(100% - 51px)",
      }
    }
  >
    <Split
      name="Workspace"
      onChange={[Function]}
      orientation={1}
      splits={
        Array [
          Object {
            "max": 400,
            "min": 200,
            "value": 200,
          },
          Object {
            "min": 256,
          },
        ]
      }
    >
      <Workspace
        file={null}
        onClickFile={[Function]}
        onDeleteFile={[Function]}
        onDoubleClickFile={[Function]}
        onEditFile={[Function]}
        onMoveFile={[Function]}
        onNewDirectory={[Function]}
        onNewFile={[Function]}
        onUploadFile={[Function]}
        project={
          ModelRef {
            "obj": Project {
              "buffer": Object {
                "IEditorConstructionOptions": Object {
                  "value": [Function],
                },
                "addAction": [Function],
                "addCommand": [Function],
                "applyEdits": [Function],
                "create": [Function],
                "createModel": [Function],
                "defineTheme": [Function],
                "getLineCount": [Function],
                "getLineMaxColumn": [Function],
                "getModel": [Function],
                "getValue": [Function],
                "layout": [Function],
                "onContextMenu": [Function],
                "onDidChangeContent": [Function],
                "onDidFocusEditorText": [Function],
                "onDidFocusEditorWidget": [Function],
                "restoreViewState": [Function],
                "revealLine": [Function],
                "saveViewState": [Function],
                "setModel": [Function],
                "setModelLanguage": [Function],
                "setModelMarkers": [Function],
                "setValue": [Function],
                "toString": [Function],
                "updateOptions": [Function],
                "uri": Object {
                  "toString": [Function],
                },
              },
              "bufferType": "directory",
              "children": Array [],
              "data": null,
              "isBufferReadOnly": false,
              "isDirty": false,
              "isOpen": true,
              "isTransient": false,
              "key": "47",
              "name": "Project",
              "onChange": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Project Change",
              },
              "onDidChangeBuffer": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Buffer Change",
              },
              "onDidChangeChildren": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Directory Changed ",
              },
              "onDidChangeData": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Data Change",
              },
              "onDidChangeDirty": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Dirty Flag Change",
              },
              "onDidChangeProblems": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "File Problems Change",
              },
              "onDidChangeStatus": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Status Change",
              },
              "onDirtyFileUsed": EventDispatcher {
                "callbacks": Array [
                  [Function],
                ],
                "name": "Dirty File Used",
              },
              "parent": null,
              "problems": Array [],
              "status": Array [
                "Idle",
              ],
              "type": "directory",
            },
          }
        }
      />
      <div
        className="fill"
      >
        <div
          style={
            Object {
              "height": "40px",
            }
          }
        >
          <Toolbar>
            <Button
              icon={<GoThreeBars />}
              key="ViewWorkspace"
              onClick={[Function]}
              title="View Project Workspace"
            />
            <Button
              icon={<GoFile />}
              isDisabled={false}
              key="NewProject"
              label="New"
              onClick={[Function]}
              title="New Project"
            />
            <Button
              icon={<GoRepoForked />}
              isDisabled={false}
              key="ForkProject"
              label="Fork"
              onClick={[Function]}
              title="Fork Project"
            />
            <Button
              icon={<GoDesktopDownload />}
              isDisabled={false}
              key="Download"
              label="Download"
              onClick={[Function]}
              title="Download Project"
            />
            <Button
              icon={<GoRocket />}
              isDisabled={true}
              key="Share"
              label="Share"
              onClick={[Function]}
              title="Cannot share a project that has not been forked yet."
            />
            <Button
              icon={<Play />}
              isDisabled={true}
              key="Run"
              label="Run"
              onClick={[Function]}
              title="Run Project: CtrlCmd + Enter"
            />
            <Button
              icon={<GoCheck />}
              isDisabled={true}
              key="Test"
              label="Test"
              onClick={[Function]}
              title="Run project tests"
            />
            <Button
              customClassName="issue"
              href="https://github.com/nearprotocol/NEARStudio/issues"
              icon={<GoOpenIssue />}
              key="GithubIssues"
              label="Report a Bug"
              rel="noopener noreferrer"
              target="_blank"
              title="Report a Bug"
            />
            <Button
              customClassName="help"
              icon={<GoQuestion />}
              key="HelpAndPrivacy"
              label="Help & Privacy"
              onClick={[Function]}
              title="Help & Privacy"
            />
          </Toolbar>
        </div>
        <div
          style={
            Object {
              "height": "calc(100% - 40px)",
            }
          }
        >
          <Split
            name="Console"
            onChange={[Function]}
            orientation={0}
            splits={
              Array [
                Object {
                  "min": 100,
                },
                Object {
                  "min": 40,
                  "value": 256,
                },
              ]
            }
          >
            <Split
              defaultSplit={
                Object {
                  "min": 128,
                }
              }
              name="Editors"
              onChange={[Function]}
              orientation={1}
              splits={Array []}
            >
              <ViewTabs
                hasFocus={true}
                key="editorPane0"
                onChangeViewType={[Function]}
                onClickView={[Function]}
                onClose={[Function]}
                onDoubleClickView={[Function]}
                onFocus={[Function]}
                onNewFile={[Function]}
                onSplitViews={[Function]}
                view={null}
                views={Array []}
              />
            </Split>
            <ControlCenter
              onToggle={[Function]}
            />
          </Split>
        </div>
      </div>
    </Split>
  </div>
  <StatusBar />
  <div
    id="task-runner-content"
  />
</div>
`;
